Added bulk processing for multiple years/watersheds

--- a/runoff_grib.ipynb
+++ b/runoff_grib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "ffdf24d3-9855-4019-bc3c-8124d4d46c59",
    "metadata": {},
    "outputs": [],
@@ -17,12 +17,13 @@
     "import xarray as xr\n",
     "import cfgrib\n",
     "\n",
-    "gdal.UseExceptions()"
+    "gdal.UseExceptions()\n",
+    "np.seterr(all='raise');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e98b627e-9704-429c-89e0-f40611bf20df",
    "metadata": {},
    "outputs": [],
@@ -168,13 +169,13 @@
       "    GRIB_subCentre:          0\n",
       "    Conventions:             CF-1.7\n",
       "    institution:             European Centre for Medium-Range Weather Forecasts\n",
-      "    history:                 2022-08-18T13:48:13 GRIB to CDM+CF via cfgrib-0....\n"
+      "    history:                 2022-08-22T12:26:21 GRIB to CDM+CF via cfgrib-0....\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f58084bbfd0>"
+       "<matplotlib.collections.QuadMesh at 0x7fc01786f520>"
       ]
      },
      "execution_count": 3,
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "8bc0fb6f-e34a-4478-87be-97e5ba6132fe",
    "metadata": {},
    "outputs": [],
@@ -263,6 +264,320 @@
     "df = pd.DataFrame({\"date\": date_list, \"mean_runoff\": mean_list})\n",
     "df.to_csv(\"grib_runoff_%s.csv\" % ws_name, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a43df7d9-1770-4aff-aaba-e309e3d89f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_Lychkovo_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1980.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1981.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1982.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1983.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1984.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1985.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1986.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1987.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1988.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1989.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1990.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1991.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1992.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1993.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1994.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1995.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1996.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1997.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1998.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1999.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2000.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2001.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2002.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2003.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2004.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2005.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2006.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2007.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2008.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2009.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2010.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2011.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2012.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2013.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2014.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2015.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2016.grib\n",
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_Ermoshkino_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1980.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1981.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1982.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1983.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1984.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1985.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1986.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1987.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1988.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1989.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1990.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1991.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1992.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1993.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1994.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1995.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1996.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1997.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1998.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1999.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2000.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2001.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2002.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2003.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2004.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2005.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2006.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2007.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2008.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2009.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2010.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2011.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2012.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2013.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2014.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2015.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2016.grib\n",
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_Yazhelbitzy_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1980.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1981.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1982.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1983.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1984.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1985.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1986.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1987.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1988.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1989.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1990.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1991.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1992.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1993.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1994.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1995.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1996.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1997.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1998.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1999.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2000.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2001.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2002.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2003.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2004.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2005.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2006.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2007.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2008.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2009.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2010.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2011.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2012.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2013.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2014.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2015.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2016.grib\n",
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_Dvorez_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1980.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1981.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1982.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1983.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1984.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1985.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1986.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1987.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1988.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1989.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1990.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1991.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1992.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1993.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1994.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1995.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1996.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1997.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1998.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1999.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2000.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2001.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2002.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2003.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2004.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2005.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2006.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2007.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2008.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2009.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2010.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2011.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2012.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2013.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2014.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2015.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2016.grib\n",
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_Mosolino_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1980.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1981.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1982.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1983.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1984.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1985.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1986.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1987.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1988.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1989.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1990.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1991.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1992.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1993.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1994.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1995.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1996.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1997.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1998.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/1999.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2000.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2001.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2002.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2003.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2004.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2005.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2006.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2007.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2008.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2009.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2010.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2011.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2012.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2013.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2014.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2015.grib\n",
+      "/home/antonv/PycharmProjects/lena/grib/2016.grib\n",
+      "Processing /home/antonv/PycharmProjects/lena/nc/ws/fix_S_Dvorez_g.geojson\n",
+      "/home/antonv/PycharmProjects/lena/grib/1979.grib\n",
+      "Watershed is too small! [/home/antonv/PycharmProjects/lena/nc/ws/fix_S_Dvorez_g.geojson]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-2-085fe8db6395>:89: RuntimeWarning: Mean of empty slice.\n",
+      "  m = masked_arr[masked_arr != nodata].mean()\n"
+     ]
+    }
+   ],
+   "source": [
+    "in_dir = \"/home/antonv/PycharmProjects/lena/grib\"\n",
+    "\n",
+    "watersheds = (\"/home/antonv/PycharmProjects/lena/nc/ws/fix_Lychkovo_g.geojson\",\n",
+    "              \"/home/antonv/PycharmProjects/lena/nc/ws/fix_Ermoshkino_g.geojson\",\n",
+    "              \"/home/antonv/PycharmProjects/lena/nc/ws/fix_Yazhelbitzy_g.geojson\",\n",
+    "              \"/home/antonv/PycharmProjects/lena/nc/ws/fix_Dvorez_g.geojson\",\n",
+    "              \"/home/antonv/PycharmProjects/lena/nc/ws/fix_Mosolino_g.geojson\",\n",
+    "              \"/home/antonv/PycharmProjects/lena/nc/ws/fix_S_Dvorez_g.geojson\",\n",
+    ")\n",
+    "\n",
+    "# ws_path = \"/home/antonv/PycharmProjects/lena/nc/ws/fix_Lychkovo_g.geojson\"\n",
+    "for ws_path in watersheds:\n",
+    "    print(\"Processing\", ws_path)\n",
+    "    mask = None\n",
+    "    gt = None\n",
+    "\n",
+    "    mean_list = []\n",
+    "    date_list = []\n",
+    "\n",
+    "    for f in sorted(os.listdir(in_dir)):\n",
+    "        in_path = os.path.join(in_dir, f)\n",
+    "        # print(in_path)\n",
+    "        # print(os.path.splitext(f)[-1])\n",
+    "\n",
+    "        if os.path.splitext(f)[-1] == \".grib\":\n",
+    "            print(in_path)\n",
+    "\n",
+    "            a = xr.load_dataset(in_path, engine=\"cfgrib\")\n",
+    "            # print(a)\n",
+    "\n",
+    "            # plt.imshow(a.dis24[0])\n",
+    "            # plt.show()\n",
+    "\n",
+    "            # 1) let's create a geotransform first:\n",
+    "            if gt is None:\n",
+    "                \"\"\"\n",
+    "                GDAL GeoTransform:\n",
+    "                GT(0) x-coordinate of the upper-left corner of the upper-left pixel.\n",
+    "                GT(1) w-e pixel resolution / pixel width.\n",
+    "                GT(2) row rotation (typically zero).\n",
+    "                GT(3) y-coordinate of the upper-left corner of the upper-left pixel.\n",
+    "                GT(4) column rotation (typically zero).\n",
+    "                GT(5) n-s pixel resolution / pixel height (negative value for a north-up image).\n",
+    "                \"\"\"\n",
+    "                lon_res = a.longitude.values[1] - a.longitude.values[0]\n",
+    "                lat_res = a.latitude.values[1] - a.latitude.values[0]\n",
+    "                lon_res = round(lon_res, 6)\n",
+    "                lat_res = round(lat_res, 6)\n",
+    "\n",
+    "                xul = a.longitude.values[0]\n",
+    "                yul = a.latitude.values[-1]\n",
+    "                xul = round(xul, 6)\n",
+    "                yul = round(yul, 6)\n",
+    "                gt = [xul, lon_res, 0, yul, 0, -lat_res]  # GeoTransform готов\n",
+    "\n",
+    "            # 2) the rest:\n",
+    "            l = len(a.dis24)  # should be 365\n",
+    "            # print(l, \"days\")\n",
+    "            try:\n",
+    "                for i in range(0, l):\n",
+    "                    arr = a.dis24[i]\n",
+    "                    arr = np.array(arr)\n",
+    "\n",
+    "                    arr = np.rot90(arr, 2)  # WHY??!\n",
+    "                    arr = np.flip(arr, 1)\n",
+    "                    # print(arr.mean())\n",
+    "\n",
+    "                    date_str = a.time.values[i]\n",
+    "                    # print(date_str)\n",
+    "                    out_path = \"daily_runoff_%s.tif\" % date_str\n",
+    "\n",
+    "                    mean, mask = crop_variable_to_watershed(arr, ws_path, gt, ready_mask=mask, out_path=None)\n",
+    "\n",
+    "                    mean_list.append(mean)\n",
+    "                    date_list.append(date_str)\n",
+    "            \n",
+    "            except FloatingPointError:\n",
+    "                print(\"Watershed is too small! [%s]\" % ws_path)\n",
+    "                break\n",
+    "\n",
+    "    ws_name = os.path.basename(os.path.splitext(ws_path)[0])  \n",
+    "\n",
+    "    df = pd.DataFrame({\"date\": date_list, \"mean_runoff\": mean_list})\n",
+    "    df.to_csv(\"grib_runoff_%s_1979-2016.csv\" % ws_name, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1c907e-2040-434b-a0e5-c714465a957b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
